--- a/package.json
+++ b/package.json
@@ -14,21 +14,30 @@
     "@emotion/react": "^11.11.4",
     "@hello-pangea/dnd": "^16.6.0",
     "@kinde-oss/kinde-auth-nextjs": "^2.2.5",
-    "@radix-ui/react-accordion": "^1.1.2",
+    "@popmotion/popcorn": "^0.4.4",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "array-move": "^4.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.24",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-awesome-reveal": "^4.2.10",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
+    "react-smooth-dnd": "^0.11.1",
+    "sass": "^1.77.8",
+    "swapy": "^0.1.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
