--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "sass": "^1.77.8",
     "swapy": "^0.1.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/node": "^20",
