--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "array-move": "^4.0.0",
@@ -29,6 +30,7 @@
     "framer-motion": "^11.3.24",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "next-intl": "^3.19.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-awesome-reveal": "^4.2.10",
